--- a/finalproject/app/src/main/res/layout/loading_state.xml
+++ b/finalproject/app/src/main/res/layout/loading_state.xml
@@ -1,52 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
-
     <data>
-
-        <import type="co.com.mycompany.myapplication.repository.Resource" />
-
+        <import type="co.com.mycompany.myapplication.repository.Resource"/>
         <import type="co.com.mycompany.myapplication.repository.Status" />
-
-        <variable
-            name="resource"
-            type="Resource" />
-
-        <variable
-            name="callback"
-            type="co.com.mycompany.myapplication.ui.common.RetryCall" />
+        <variable name="resource" type="Resource"/>
+        <variable name="callback" type="co.com.mycompany.myapplication.ui.common.RetryCall"/>
     </data>
-
-    <LinearLayout
+    <LinearLayout android:orientation="vertical"
+        app:visibleGone="@{resource == null || resource.data == null}"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
         android:gravity="center"
-        android:orientation="vertical"
         android:padding="@dimen/default_margin"
-        app:visibleGone="@{resource.data == null}">
-
+        android:layout_height="wrap_content">
         <ProgressBar
-            android:id="@+id/progress_bar"
+            app:visibleGone="@{resource.status == Status.LOADING}"
             style="?android:attr/progressBarStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="8dp"
-            app:visibleGone="@{resource.status == Status.LOADING}" />
-
-        <Button
-            android:id="@+id/retry"
-            android:layout_width="wrap_content"
+            android:id="@+id/progress_bar"
+            android:layout_margin="8dp"/>
+        <Button android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:onClick="@{() -> callback.retry()}"
             android:text="@string/retry"
-            app:visibleGone="@{resource.status == Status.ERROR}" />
-
-        <TextView
-            android:id="@+id/error_msg"
-            android:layout_width="wrap_content"
+            android:id="@+id/retry"
+            android:onClick="@{() -> callback.retry()}"
+            app:visibleGone="@{resource.status == Status.ERROR}"/>
+        <TextView android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:id="@+id/error_msg"
             android:text="@{resource.message ?? @string/unknown_error}"
-            app:visibleGone="@{resource.status == Status.ERROR}" />
+            app:visibleGone="@{resource.status == Status.ERROR}"/>
     </LinearLayout>
 </layout>
-
