--- a/finalproject/app/src/main/res/layout/repo_item.xml
+++ b/finalproject/app/src/main/res/layout/repo_item.xml
@@ -2,66 +2,50 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
-
     <data>
-
-        <variable
-            name="showFullName"
-            type="boolean" />
-
-        <variable
-            name="repo"
-            type="co.com.mycompany.myapplication.model.Repo" />
+        <variable name="showFullName" type="boolean"/>
+        <variable name="repo" type="co.com.mycompany.myapplication.model.Repo"/>
     </data>
-
-    <androidx.cardview.widget.CardView
-        android:layout_width="match_parent"
+    <androidx.cardview.widget.CardView android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:cardUseCompatPadding="true">
-
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
             <TextView
-                android:id="@+id/name"
+                android:text="@{showFullName ? repo.fullName : repo.name}"
                 android:layout_width="368dp"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/default_margin"
-                android:layout_marginLeft="@dimen/default_margin"
-                android:layout_marginTop="16dp"
-                android:text="@{showFullName ? repo.fullName : repo.name}"
-                app:layout_constraintStart_toEndOf="@+id/stars"
+                android:id="@+id/name"
+                tools:text="repository name" android:layout_marginTop="16dp"
                 app:layout_constraintTop_toTopOf="parent"
-                tools:text="repository name" />
-
-            <TextView
-                android:id="@+id/desc"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
+                app:layout_constraintStart_toEndOf="@+id/stars"
                 android:layout_marginStart="@dimen/default_margin"
-                android:layout_marginLeft="@dimen/default_margin"
-                android:layout_marginTop="8dp"
-                android:text="@{repo.description}"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/name"
-                tools:layout_editor_absoluteX="@dimen/default_margin"
-                tools:text="this is some description more description more description" />
-
+                android:layout_marginLeft="@dimen/default_margin"/>
             <TextView
-                android:id="@+id/stars"
+                android:text="@{repo.description}"
+                android:layout_height="wrap_content"
+                android:id="@+id/desc"
+                android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/name"
+                app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginStart="@dimen/default_margin"
+                tools:layout_editor_absoluteX="@dimen/default_margin"
+                tools:text="this is some description more description more description"
+                android:layout_width="0dp" android:layout_marginLeft="@dimen/default_margin"/>
+            <TextView
+                android:text="@{`` + repo.starts}"
+                android:gravity="center"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:id="@+id/stars" tools:text="5"
+                app:layout_constraintStart_toStartOf="parent"
                 android:layout_marginStart="@dimen/default_margin"
-                android:layout_marginLeft="@dimen/default_margin"
+                app:layout_constraintTop_toTopOf="parent"
                 android:layout_marginTop="@dimen/default_margin"
                 android:drawableStart="@android:drawable/btn_star"
                 android:drawableLeft="@android:drawable/btn_star"
-                android:gravity="center"
-                android:text="@{`` + repo.starts}"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                tools:text="5" />
+                android:layout_marginLeft="@dimen/default_margin"/>
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
 </layout>
